# local-open-webui

./: .gitignore  Dockerfile  Makefile  README.md
container/: bank.py  main.py  pyproject.toml
container/lib/: prompt.py
