[tool.poetry]
name = "local-ask-llm"
version = "0.1.0"
description = ""
authors = ["Josko de Boer <Josko.deboer@xomnia.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
numpy = "^2.2.0"
scipy = "^1.14.1"
polars = "^1.17.1"
requests = "^2.32.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
